# forest_ml_demo

./: .gitignore  INSTALL.md  README.md  UPDATEML.md  pyproject.toml  run_mlflow_server.cmd
configs/: dev.yaml  model_map.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml
generation_dataset_tool/: Bullfinch_Synthetic_Forestry_Dataset_Spec.xlsx  README.md  generate_bullfinch_synthetic_forest_dataset.py
k8s/: README.md  deployment.yaml  ingress.yaml  namespace.yaml  secret-env.yaml  secret.env  service.yaml
mlflow_server/: mlflow.db
src/bullfinch_forest_ml_demo/api/: README.md  api_schemas.py  app.py  examples.md  models.py
src/bullfinch_forest_ml_demo/api/features/: constants.py  engineering.py  examples.py  schema.py
src/bullfinch_forest_ml_demo/preprocessing/: buid_datasets.py
src/bullfinch_forest_ml_demo/training/: README.md  mlflow_utils.py  train_baselines.py  train_baselines_lgbm.py  training_task_classification.py  training_task_classification_lgbm.py  training_task_forecasting.py  training_task_forecasting_lgbm.py
tools/: README.md  select_models.py
