[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bullfinch-forest-ml-demo"
version = "0.1.0"
description = "Synthetic forestry ML demo: classification + forecasting with MLflow and FastAPI"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "lightgbm",
  "mlflow",
  "fastapi",
  "uvicorn",
  "pydantic-settings",
  "python-dotenv",
  "pyyaml",
  "joblib",
  "psycopg2-binary",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
